fix: tweak list alignments

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -119,7 +119,7 @@ ul {
 
 // ul are not as indented as ol, so we need to add some padding-left
 ul {
-  padding-left: calc(#{$list-padding-left} + 1.25 * #{$li-padding-left});
+  padding-left: calc(#{$list-padding-left} + 1 * #{$li-padding-left});
 }
 
 ol {
